// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`array 1`] = `
"const valid_TestType = [
    [],
    ["string"]
];
const invalid_TestType = [
    invalidValue,
    [invalidValue]
];
describe("TestType", () => {
    it.for(valid_TestType)("valid", value => {
        expect(isTestType(value)).toBe(true);
    });
    it.for(invalid_TestType)("invalid", value => {
        expect(isTestType(value)).toBe(false);
    });
});
"
`;

exports[`multiple types 1`] = `
"import { isType1, isType2 } from "TestType";
const invalidValue: any = Symbol("invalidValue");
const valid_Type1 = [
    "string",
    0,
    42
];
const invalid_Type1 = [
    invalidValue
];
describe("Type1", () => {
    it.for(valid_Type1)("valid", value => {
        expect(isType1(value)).toBe(true);
    });
    it.for(invalid_Type1)("invalid", value => {
        expect(isType1(value)).toBe(false);
    });
});
const valid_Type2 = [
    null,
    false,
    true
];
const invalid_Type2 = [
    invalidValue
];
describe("Type2", () => {
    it.for(valid_Type2)("valid", value => {
        expect(isType2(value)).toBe(true);
    });
    it.for(invalid_Type2)("invalid", value => {
        expect(isType2(value)).toBe(false);
    });
});
"
`;

exports[`object 1`] = `
"const valid_TestType = [
    { "a": "string", "b": 0, "c": true },
    { "a": "string", "b": 0, "c": false },
    { "a": "string", "b": 42, "c": true },
    { "a": "string", "b": 42, "c": false }
];
const invalid_TestType = [
    invalidValue,
    { "b": 0, "c": true },
    { "b": 0, "c": false },
    { "b": 42, "c": true },
    { "b": 42, "c": false },
    { "a": invalidValue, "b": 0, "c": true },
    { "a": invalidValue, "b": 0, "c": false },
    { "a": invalidValue, "b": 42, "c": true },
    { "a": invalidValue, "b": 42, "c": false },
    { "a": "string", "c": true },
    { "a": "string", "c": false },
    { "a": "string", "b": invalidValue, "c": true },
    { "a": "string", "b": invalidValue, "c": false },
    { "a": "string", "b": 0 },
    { "a": "string", "b": 0, "c": invalidValue },
    { "a": "string", "b": 42 },
    { "a": "string", "b": 42, "c": invalidValue }
];
describe("TestType", () => {
    it.for(valid_TestType)("valid", value => {
        expect(isTestType(value)).toBe(true);
    });
    it.for(invalid_TestType)("invalid", value => {
        expect(isTestType(value)).toBe(false);
    });
});
"
`;

exports[`primitive 1`] = `
"const valid_TestType = [
    0,
    42
];
const invalid_TestType = [
    invalidValue
];
describe("TestType", () => {
    it.for(valid_TestType)("valid", value => {
        expect(isTestType(value)).toBe(true);
    });
    it.for(invalid_TestType)("invalid", value => {
        expect(isTestType(value)).toBe(false);
    });
});
"
`;

exports[`union 1`] = `
"const valid_TestType = [
    "string",
    0,
    42
];
const invalid_TestType = [
    invalidValue
];
describe("TestType", () => {
    it.for(valid_TestType)("valid", value => {
        expect(isTestType(value)).toBe(true);
    });
    it.for(invalid_TestType)("invalid", value => {
        expect(isTestType(value)).toBe(false);
    });
});
"
`;
